--- a/simple.html
+++ b/simple.html
@@ -2,6 +2,7 @@
 
 <!--
 	Copyright 2020 Git.Training
+	Adding changes before resolving conflicts
 -->
 <head>
 	<title>A Very Respectfull Website</title>
