mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,8 @@
 
 <!--
 	Copyright 2020 Git.Training
-	Adding changes before resolving conflicts
+	Adding changes before resolving conflicts. Adding trouble
+	Some silly changes.
 -->
 <head>
 	<title>A Very Respectfull Website</title>
@@ -17,11 +18,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Jungle junke -->
 		<p>
+		More trouble
+		Some silly changes
 		</p>
 	</main>
 	<footer class="container">
+	Marko polo
 	</footer>
 </body>
 </html>
