Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -2,11 +2,10 @@
 
 <!--
 	Copyright 2020 Git.Training
-	Adding changes before resolving conflicts. Adding trouble
-	Some silly changes.
+
 -->
 <head>
-	<title>A Very Respectfull Website</title>
+	<title>Lots of trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
