--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@
 		</p>
 	</main>
 	<footer class="container">
-	Marko polo
+	<p>2020 Git.Training, All rights reserved.</p>
 	</footer>
 </body>
 </html>
