Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 
 -->
 <head>
-	<title>Lots of trouble, in a little repo</title>
+	<title>Updating title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,8 +19,7 @@
 	<main class="container">
 	<!-- Jungle junke -->
 		<p>
-		More trouble
-		Some silly changes
+		Adding more important content here for stash.
 		</p>
 	</main>
 	<footer class="container">
