--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@
 
 -->
 <head>
-	<title>Updating title for Stash Branch Example</title>
+	<title>Updating title for Title Compare Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
